--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
-
-# Godot-specific ignores
-.import/
-export.cfg
-export_presets.cfg
-
-# Mono-specific ignores
-.mono/
-data_*/
+*.rpy[bc]
+*.bak
+**/tmp/*
+**/log.txt
+**/game/saves/*
+**/errors.txt
+**/traceback.txt
+*-dists/*
+Desktop.ini
+*.lnk
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
